<resources>
    <string name="app_name">navigation</string>
    <string name="title_home">Home</string>
    <string name="send">发送</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed_diss">踩</string>
    <string name="feed_like">赞</string>
    <string name="feed_share">分享</string>
    <string name="feed_comment">评论</string>
    <string name="feed_collect">收藏</string>
    <string name="feed_comment_edit_hint">十全九美，就差你一美</string>
    <string name="feed_collected">已收藏</string>
    <string name="login_qq">QQ快捷登录</string>
    <string name="has_followed">已关注</string>
    <string name="follow">关注</string>
    <string name="item_comment_author">作者</string>
    <string name="empty_comment">暂无评论，快去强一楼啊！</string>
    <string name="capture_tips">轻触拍照，长按摄像</string>
    <string name="capture_permission_warning">必要权限没有得到授权，相关功能将无法使用 \n请重新授权</string>
    <string name="capture_permission_deny">不</string>
    <string name="capture_permission_yes">好的</string>
    <string name="finish">完成</string>
    <string name="upload">正在上传中...</string>
    <string name="file_upload_failed">文件上传失败</string>
    <string name="publish_title">帖子发布</string>
    <string name="publish">发布</string>
    <string name="publish_hint">请输入帖子内容</string>
    <string name="publish_add_tag">添加话题</string>
    <string name="publish_exit_tip">退出后编辑内容将会丢失，是否确认退出</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="publish_choice_tag">选择标签</string>
    <string name="upload_cover_failed">封面上传失败</string>
    <string name="upload_file_failed">原始文件上传失败</string>
    <string name="publish_success">帖子发布成功，去沙发页看看吧！</string>
    <string name="publish_tip">正在发布中...</string>
    <string name="find_hot_tip">条热门内容</string>
    <string name="find_follow">已关注</string>
    <string name="find_unfollow">关注</string>
    <string name="empty_find_tip">还没关注任何数据，去推荐页面看看吧~</string>
    <string name="view_recommend">看看推荐</string>
    <string name="like_count">\n获赞</string>
    <string name="fans_count">\n粉丝</string>
    <string name="follow_count">\n关注</string>
    <string name="score_count">\n积分</string>
    <string name="my_feed">帖子</string>
    <string name="my_comment">评论</string>
    <string name="my_favorite">收藏</string>
    <string name="my_history">帖子</string>
    <string name="confirm_logout">确认要继续退出吗？</string>

    <string-array name="profile_tabs">
        <item>动态</item>
        <item>帖子</item>
        <item>评论</item>
    </string-array>
</resources>